--- a/drivers/gpu/drm/Kconfig
+++ b/drivers/gpu/drm/Kconfig
@@ -28,6 +28,18 @@ config DRM_KMS_HELPER
 	help
 	  FB and CRTC helpers for KMS drivers.
 
+config DRM_VCRTCM
+	tristate "Bell Labs Virtual CRTC Manager (VCRTCM)"
+	depends on DRM
+	help
+	  Virtual CRTC manager from Bell Labs for GPU devices with virtual
+	  CRTCs. If a driver that supports virtual CRTCs (e.g. radeon) is
+	  selected, this module will be automatically selected. If not, you can
+	  still select it manually, assuming that you have a good use for it.
+
+	  Select either 'm' or 'n'; 'y' has not been tested. Selecting 'm',
+	  even if you have no use for it, is safe.
+
 config DRM_TTM
 	tristate
 	depends on DRM
