--- a/drivers/gpu/drm/Kconfig
+++ b/drivers/gpu/drm/Kconfig
@@ -40,6 +40,11 @@ config DRM_VCRTCM
 	  Select either 'm' or 'n'; 'y' has not been tested. Selecting 'm',
 	  even if you have no use for it, is safe.
 
+menu "VCRTCM CTD Drivers"
+        depends on DRM_VCRTCM
+	source "drivers/gpu/drm/ctd/udlctd/Kconfig"
+endmenu
+
 config DRM_TTM
 	tristate
 	depends on DRM
