drm: add v4l2ctd driver
CTD driver that presents the pixel stream to userland
as V4L2 device. Allows applications that can take input
from a V4L2 device to do something good with pixels
rendered on a GPU using full hardware acceleration

Signed-off-by: Hans Christian Woithe <hans.woithe@alcatel-lucent.com>
Signed-off-by: Ilija Hadzic <ihadzic@research.bell-labs.com>

--- a/drivers/gpu/drm/Kconfig
+++ b/drivers/gpu/drm/Kconfig
@@ -43,6 +43,7 @@ config DRM_VCRTCM
 menu "VCRTCM CTD Drivers"
         depends on DRM_VCRTCM
 	source "drivers/gpu/drm/ctd/udlctd/Kconfig"
+	source "drivers/gpu/drm/ctd/v4l2ctd/Kconfig"
 endmenu
 
 config DRM_TTM
